<?xml version="1.0"?>
<package format="2">
  <name>pablowsky_simulation</name>
  <version>0.0.0</version>
  <description>pablowsky bot gazebo simulation</description>

  <maintainer email="olima_84@yahoo.com">Oscar Lima</maintainer>

  <license>BSD</license>

  <!--   <build_depend>roscpp</build_depend> -->
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
